--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 .main {
+    z-index: 2;
     width: 800px;
     height: 400px;
     position: absolute;
@@ -66,3 +67,169 @@
   opacity: 1;
   right: 0;
 }
+
+
+
+
+
+
+
+
+
+
+@keyframes makeTwinkle {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+@-webkit-keyframes makeTwinkle {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+@-moz-keyframes makeTwinkle {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+@-ms-keyframes makeTwinkle {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+
+.stars, .twinkling {
+  position:absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  width:100%;
+  height:100%;
+  display:block;
+}
+
+.stars {
+  background:#000 url(../images/stars.jpg) repeat top center;
+  z-index:0;
+}
+
+.twinkling{
+  background:transparent url(../images/smudge.png) repeat top center;
+  z-index:1;
+
+  -moz-animation:makeTwinkle 200s linear infinite;
+  -ms-animation:makeTwinkle 200s linear infinite;
+  -o-animation:makeTwinkle 200s linear infinite;
+  -webkit-animation:makeTwinkle 200s linear infinite;
+  animation:makeTwinkle 200s linear infinite;
+}
+
+
+@keyframes makeTwinkle2 {
+    from {background-position:-10000px 5000px;}
+    to {background-position:0 0;}
+}
+@-webkit-keyframes makeTwinkle2 {
+    from {background-position:-10000px 5000px;}
+    to {background-position:0 0;}
+}
+@-moz-keyframes makeTwinkle2 {
+    from {background-position:-10000px 5000px;}
+    to {background-position:0 0;}
+}
+@-ms-keyframes makeTwinkle2 {
+    from {background-position:-10000px 5000px;}
+    to {background-position:0 0;}
+}
+
+.twinkling2 {
+  position:absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  width:100%;
+  height:100%;
+  display:block;
+}
+
+
+.twinkling2{
+  background:transparent url(../images/smudge2.png) repeat top center;
+  z-index:1;
+
+  -moz-animation:makeTwinkle2 300s linear infinite;
+  -ms-animation:makeTwinkle2 300s linear infinite;
+  -o-animation:makeTwinkle2 300s linear infinite;
+  -webkit-animation:makeTwinkle2 300s linear infinite;
+  animation:makeTwinkle2 300s linear infinite;
+}
+
+
+.glowing {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.glowing span {
+    color: #fff;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 10px;
+    color: #fff;
+    display: inline-block;
+    animation: animate 2s linear infinite;
+    width: 24px;
+    height: 24px;
+    text-align: center;line-height: 24px;
+    border: 1px solid rgba(255, 255, 255, .4);
+    margin: 0 -2.5px;
+}
+
+@keyframes animate 
+{
+    0%
+    {
+        color:#f00;
+        box-shadow: 0 2px 10px rgba(255, 0, 0, 1);
+        border: 1px solid rgba(255, 0, 0,1);
+    }
+    33.3%
+    {
+        color:#ff0;
+        box-shadow: 0 2px 10px rgba(255, 255, 0, 1);
+        border: 1px solid rgba(255, 255, 0,1);
+    }
+    66.6%
+    {
+        color:#0f0;
+        box-shadow: 0 2px 10px rgba(0, 255, 0, 1);
+        border: 1px solid rgba(0, 255, 0,1);
+    }
+    100%
+    {
+        color:#00f;
+        box-shadow: 0 2px 10px rgba(0, 0, 255, 1);
+        border: 1px solid rgba(0, 0, 255,1);
+    }
+}
+.glowing span:nth-child(1)
+{animation-delay: 0s;}
+.glowing span:nth-child(2)
+{animation-delay: 0.1s;}
+.glowing span:nth-child(3)
+{animation-delay: 0.2s;}
+.glowing span:nth-child(4)
+{animation-delay: 0.3s;}
+.glowing span:nth-child(5)
+{animation-delay: 0.4s;}
+.glowing span:nth-child(6)
+{animation-delay: 0.5s;}
+.glowing span:nth-child(7)
+{animation-delay: 0.6s;}
+.glowing span:nth-child(8)
+{animation-delay: 0.7s;}
+.glowing span:nth-child(9)
+{animation-delay: 0.8s;}
+.glowing span:nth-child(10)
+{animation-delay: 0.9s;}
+.glowing span:nth-child(11)
+{animation-delay: 1s;}
