--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'Audiowide', cursive;
+}
+
 .main {
     z-index: 2;
     width: 800px;
@@ -10,6 +14,16 @@
     left: 0;
     background-color: #ccc;
     border-radius: 3px;
+    background: url(../images/background.gif);
+    background-size: 100%;
+
+    -moz-box-shadow:    inset 0 0 100px #000000;
+    -webkit-box-shadow: inset 0 0 100px #000000;
+    box-shadow:         inset 0 0 500px #000000;
+
+    border-radius: 200px;
+    
+
 }
 
 
@@ -19,11 +33,14 @@
 }
 
 .btnContainer{
-   position: fixed;
-   top: 70%;
+   position: absolute;
+   top: 50%;
    left: 50%;
-   margin: -100px 0px 0px -100px;
+   transform: translate(-50%, -50%);
+
    text-align:center;
+   color: white;
+   font-family: 'Audiowide', cursive;
 }
 .startButton {
   border-radius: 4px;
@@ -163,23 +180,27 @@
 }
 
 
+
+/* SPACE GLOWING */
 .glowing {
     position: absolute;
-    top: 10%;
     left: 50%;
     transform: translate(-50%, -50%);
+    width: 80%;
+    background-color: #000;
+    top:-10%;
 }
 
 .glowing span {
     color: #fff;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 10px;
+    font-family: 'Audiowide', cursive;
+    font-size: 20px;
     color: #fff;
     display: inline-block;
     animation: animate 2s linear infinite;
-    width: 24px;
-    height: 24px;
-    text-align: center;line-height: 24px;
+    width: 50px;
+    height: 50px;
+    text-align: center;line-height: 50px;
     border: 1px solid rgba(255, 255, 255, .4);
     margin: 0 -2.5px;
 }
@@ -188,15 +209,15 @@
 {
     0%
     {
-        color:#f00;
-        box-shadow: 0 2px 10px rgba(255, 0, 0, 1);
-        border: 1px solid rgba(255, 0, 0,1);
+        color:#2846A8;
+        box-shadow: 0 2px 10px rgba(40, 70, 168, 1);
+        border: 1px solid rgba(40, 70, 168, 1);
     }
     33.3%
     {
-        color:#ff0;
-        box-shadow: 0 2px 10px rgba(255, 255, 0, 1);
-        border: 1px solid rgba(255, 255, 0,1);
+        color:#159CB1;
+        box-shadow: 0 2px 10px rgba(21, 156, 177, 1);
+        border: 1px solid rgba(21, 156, 177, 1);
     }
     66.6%
     {
@@ -214,22 +235,80 @@
 .glowing span:nth-child(1)
 {animation-delay: 0s;}
 .glowing span:nth-child(2)
-{animation-delay: 0.1s;}
-.glowing span:nth-child(3)
 {animation-delay: 0.2s;}
-.glowing span:nth-child(4)
-{animation-delay: 0.3s;}
-.glowing span:nth-child(5)
+.glowing span:nth-child(3)
 {animation-delay: 0.4s;}
-.glowing span:nth-child(6)
-{animation-delay: 0.5s;}
-.glowing span:nth-child(7)
+.glowing span:nth-child(4)
 {animation-delay: 0.6s;}
-.glowing span:nth-child(8)
-{animation-delay: 0.7s;}
-.glowing span:nth-child(9)
+.glowing span:nth-child(5)
 {animation-delay: 0.8s;}
-.glowing span:nth-child(10)
-{animation-delay: 0.9s;}
-.glowing span:nth-child(11)
-{animation-delay: 1s;}
+
+/* TRIVIA GLOWING */
+
+.glowing2 {
+    position: absolute;
+    left: 93%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    background-color: #000;
+    top:-10%;
+}
+
+.glowing2 span {
+    color: #fff;
+    font-family: 'Audiowide', cursive;
+    font-size: 20px;
+    color: #fff;
+    display: inline-block;
+    animation: animate 2s linear infinite;
+    width: 50px;
+    height: 50px;
+    text-align: center;line-height: 50px;
+    border: 1px solid rgba(255, 255, 255, .4);
+    margin: 0 -2.5px;
+}
+
+@keyframes animate 
+{
+    0%
+    {
+        color:#2846A8;
+        box-shadow: 0 2px 10px rgba(40, 70, 168, 1);
+        border: 1px solid rgba(40, 70, 168, 1);
+    }
+    33.3%
+    {
+        color:#159CB1;
+        box-shadow: 0 2px 10px rgba(21, 156, 177, 1);
+        border: 1px solid rgba(21, 156, 177, 1);
+    }
+    66.6%
+    {
+        color:#0f0;
+        box-shadow: 0 2px 10px rgba(0, 255, 0, 1);
+        border: 1px solid rgba(0, 255, 0,1);
+    }
+    100%
+    {
+        color:#00f;
+        box-shadow: 0 2px 10px rgb(17,160,201);
+        border: 1px solid rgb(17,160,201);
+    }
+}
+.glowing2 span:nth-child(1)
+{animation-delay: 0s;}
+.glowing2 span:nth-child(2)
+{animation-delay: 0.13333333s;}
+.glowing2 span:nth-child(3)
+{animation-delay: 0.26666666s;}
+.glowing2 span:nth-child(4)
+{animation-delay: 0.3999999s;}
+.glowing2 span:nth-child(5)
+{animation-delay: 0.5333333s;}
+.glowing2 span:nth-child(6)
+{animation-delay: 0.8s;}
+
+
+.theAnswer {
+    color:white;
+}
