--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,49 +42,27 @@ body {
    color: white;
    font-family: 'Audiowide', cursive;
 }
-.startButton {
-  border-radius: 4px;
-  background-color: skyblue;
-  border: none;
-  color: #FFFFFF;
-  text-align: center;
-  font-size: 28px;
-  padding: 20px;
-  width: 200px;
-  transition: all 0.5s;
-  cursor: pointer;
-  position:relative;
-  top: 50%;
-  transform: translateY(-50%); 
-  
-  
-}
 
-.startButton span {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  transition: 0.5s;
-}
 
-.startButton span:after {
-  content: '\00bb';
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -20px;
-  transition: 0.5s;
+button {
+    border-radius: 30%;
+    font-family: 'Audiowide', cursive;
+    border: 4px solid #333;
+    background: #262626;
+    transition: .5s;
+    width: 100px;
+    height: 100px;
 }
+button:hover{
+    color: #444;
+    border: 4px solid #444;
 
-.startButton:hover span {
-  padding-right: 25px;
 }
-
-.startButton:hover span:after {
-  opacity: 1;
-  right: 0;
+button:active:hover{
+    color: #00fff5;
+    border: 4px solid #00fff5;
 }
-
+button:focus {outline:0;}
 
 
 
@@ -232,15 +210,15 @@ body {
         border: 1px solid rgba(0, 0, 255,1);
     }
 }
-.glowing span:nth-child(1)
+.glowing span:nth-child(5)
 {animation-delay: 0s;}
-.glowing span:nth-child(2)
+.glowing span:nth-child(4)
 {animation-delay: 0.2s;}
 .glowing span:nth-child(3)
 {animation-delay: 0.4s;}
-.glowing span:nth-child(4)
+.glowing span:nth-child(2)
 {animation-delay: 0.6s;}
-.glowing span:nth-child(5)
+.glowing span:nth-child(1)
 {animation-delay: 0.8s;}
 
 /* TRIVIA GLOWING */
