--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,20 +47,25 @@ body {
 button {
     border-radius: 30%;
     font-family: 'Audiowide', cursive;
-    border: 4px solid #333;
-    background: #262626;
+    font-size: 90%;
+    border: 4px solid #fff;
+    background: whitesmoke;
     transition: .5s;
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 75px;
+    margin: 10px;
 }
 button:hover{
     color: #444;
     border: 4px solid #444;
+    background-color: lightgray;
 
 }
 button:active:hover{
-    color: #00fff5;
+    color: white;
     border: 4px solid #00fff5;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #2846A8;
 }
 button:focus {outline:0;}
 
@@ -71,7 +76,8 @@ button:focus {outline:0;}
 
 
 
-
+/* THE BACKGROUND */
+/* ********************************************************************************************** */
 @keyframes makeTwinkle {
     from {background-position:0 0;}
     to {background-position:-10000px 5000px;}
@@ -158,7 +164,8 @@ button:focus {outline:0;}
 }
 
 
-
+/* SPACE TRIVIA GLOWING */
+/* ************************************************************************************************* */
 /* SPACE GLOWING */
 .glowing {
     position: absolute;
@@ -193,9 +200,9 @@ button:focus {outline:0;}
     }
     33.3%
     {
-        color:#159CB1;
-        box-shadow: 0 2px 10px rgba(21, 156, 177, 1);
-        border: 1px solid rgba(21, 156, 177, 1);
+        color:#00fff5;
+        box-shadow: 0 2px 10px #00fff5;
+        border: 1px solid #00fff5;
     }
     66.6%
     {
@@ -256,9 +263,9 @@ button:focus {outline:0;}
     }
     33.3%
     {
-        color:#159CB1;
-        box-shadow: 0 2px 10px rgba(21, 156, 177, 1);
-        border: 1px solid rgba(21, 156, 177, 1);
+        color:#00fff5;
+        box-shadow: 0 2px 10px #00fff5;
+        border: 1px solid #00fff5;
     }
     66.6%
     {
@@ -289,4 +296,74 @@ button:focus {outline:0;}
 
 .theAnswer {
     color:white;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #2846A8;
+    margin-bottom: 25%;
+    font-size: 150%;
+    line-height: 130%;
+    
+}
+
+.answerYo {
+    color:#00fff5;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #2846A8;
+}
+
+.questionInput {
+    font-size: 150%;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #2846A8;
+}
+
+.timer {
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #2846A8;
+}
+
+
+
+
+
+
+
+
+.alien {
+    background: url(../images/ye.gif);
+    background-size: 100%;
+    z-index: 3;
+    width: 150px;
+    height: 120px;
+    position: absolute;
+    top: 70%;
+    right: 0px;
+    margin-right: 110px;
+
+
+    
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+.alien2 {
+    background: url(../images/spinspinspin.gif);
+    background-size: 100%;
+    z-index: 3;
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    top: 20%;
+    margin-left: 110px;
+    transform: rotate(180deg);
 }
